ground items: prioritize exact matches over wildcard matches
This makes exact matches on the hidden or highlight list prioritize over
wildcard matches on the oppoosing list. This replaces the previous
behaviour of always preferring highlighted over hidden.

Additionally remove the guava hidden/highlight matching caching as I
don't think this is necessary anymore. When this was first written,
these caches were hit per item per frame, but the item match state is
now saved in GroundItem as of 5baeb0ae992280b6e269f8d8bb8ea5635d749edb